--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
   <body>
     <div id="root"></div>
+    <!-- Runtime configuration - loaded before main app -->
+    <script src="/config.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
